ColorPickerComponent: Added div behind preview to fix issue with low opacity colors blending with sidebar

--- a/client/src/app/components/sidebar/sidebar-tools-options-2.0/sidebar-pipette/sidebar-pipette.component.scss
+++ b/client/src/app/components/sidebar/sidebar-tools-options-2.0/sidebar-pipette/sidebar-pipette.component.scss
@@ -12,16 +12,6 @@
     color: #eee;
     margin-left: 10px;
 }
-#width-setting {
-    display: block;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-#pipettePreview {
-    width: 220px;
-    height: 220px;
-    margin-left: -30px;
-}
 #colorPicker {
     margin-left: -10px;
 }
